<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    android:background="@drawable/color_gradient_red">

    <ProgressBar
        android:id="@+id/add_fragment_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="264dp"
        android:layout_height="45dp"
        android:layout_margin="12dp"
        android:layout_marginBottom="172dp"
        android:hint="@string/_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        tools:layout_editor_absoluteX="0dp">

        <CheckBox
            android:id="@+id/c0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25dp"
            android:text="@string/ankul"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25dp"
            android:text="@string/ankur"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25dp"
            android:text="@string/pranav"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25dp"
            android:text="@string/shivendra"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="86dp"
        android:layout_height="44dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/set_fire_color"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorFire"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/set_smooth_color"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorSmooth"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/set_ice_color"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorIce"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/set_grass_color"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorGrass"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

</androidx.constraintlayout.widget.ConstraintLayout>